# serial_driver_updates

./: .gitignore  CMakeLists.txt  Doxyfile  ERROR_HANDLING_SUMMARY.md  Makefile  README.md  xr17v358.c  xr17v358.h
include/: errors.h  serial_driver.h  x17v358_regs.h
source/: main.c  serial_driver.c
tests/: serial_driver_test.cpp  x17v358_regs_test.cpp
